fix: tooltip on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,12 @@
   padding: 1rem 10rem;
 }
 
+@media (max-width: 767px) {
+  .tooltip {
+    padding: 20px 40px;
+  }
+}
+
 .permalink {
   background: linear-gradient(45deg, #ff00ff, #00f7ff);
   -webkit-background-clip: text;
